## Refine tree transitions and coast wave limits